# 2023-qualif

./: README.md
Cryptography/Galactous, the destroyer of gaseous planets/: README.md
Cryptography/Power issue/: README.md
Cryptography/Power issue... but different/: README.md
Cryptography/Trusted/: README.md
Cryptography/Trusted 2/: README.md
Forensic/ 	Assassin's comunication/: README.md
Forensic/Merlin the wizard/: README.md  Write-Up.md
Forensic/Waiting for love/: README.md  Write-Up.md  chall.pcapng
Hardware/A signal can be a wavepon/: README.md
Hardware/Four Super Kaptains/: README.md
Hardware/WebSDR 2.0/: README.md
Miscellaneous/A pass to the ISS/: README.md
Miscellaneous/Chat with me/: README.md
Miscellaneous/Cloudy wtmp a Chance of Meatballs/: README.md
Miscellaneous/I can code in Cow-boy/: README.md
Miscellaneous/Pressure drop/: README.md
Miscellaneous/This challenge is "P.A.S. trop dur"/: README.md  chall.pcapng
OSINT/A long time ago in a galaxy far, far away..../: README.md
OSINT/A starry night sky/: README.md
OSINT/Vrooooom/: README.md
Pwn/Defuser/: README.md
Pwn/Galactic Loto/: README.md
Pwn/Parrot/: README.md
Reverse/Crackme/: README.md
Reverse/Layers/: README.md
Reverse/Nanomachine/: README.md
Reverse/Taurus ACS/: README.md
Reverse/Taurus ACS/chall/src-tauri/: Cargo.toml  tauri.conf.json
Reverse/Taurus ACS/chall/src-tauri/icons/: icon.icns
Reverse/Taurus ACS/chall/src-tauri/src/: main.rs
Steganography/A Weird Banana/: README.md
Steganography/Astronaut's Poem/: README.md
Web3/: README.md
(+180 files in other folders)
